--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <!-- warranty -->
 
-    <section class="warranty my-3">
+    <section class="warranty my-5">
         <div class="container">
             <div class="row justify-content-between">
                 <!-- left -->
@@ -108,7 +108,7 @@
 
     <!-- ZEN care -->
 
-    <section class="care">
+    <section class="care my-5">
         <div class="container">
             <div class="row justify-content-between">
                 <!-- left -->
@@ -136,7 +136,7 @@
 
     <!-- cashback -->
 
-    <section class="cashback my-3">
+    <section class="cashback my-5">
         <div class="container">
             <div class="row">
 
@@ -152,10 +152,10 @@
                     </div>
                 </div>
             </div>
-            </section>
+   </section>
 
             <!-- partner -->
-            <section class="partners my-5">
+    <section class="partners my-5">
                 <div class="container">
                     <div class="row ">
                         <img src="./img/partner-1.png" alt="" class="col-3 px-5">
@@ -168,9 +168,9 @@
                         <img src="./img/partner-8.png" alt="" class="col-3 px-5">
                     </div>
                 </div>
-            </section>
+    </section>
 <!-- Mastercard -->
-<section class="mastercard">
+<section class="mastercard my-5">
     <div class="container">
         <div class="row justify-content-between"> 
             <!-- left -->
@@ -198,7 +198,7 @@
 
 <!-- shopping -->
 
-<section class="shopping my-3">
+<section class="shopping my-5">
     <div class="container">
         <div class="row justify-content-between">
             <!-- left -->
@@ -218,7 +218,7 @@
 
 <!-- one app -->
 
-<section class="one-app my-3">
+<section class="one-app my-5">
     <div class="container">
         <div class="row justify-content-between"> 
             <!-- left -->
@@ -238,7 +238,7 @@
 
 <!-- account -->
 
-<section class="account my-3">
+<section class="account my-5">
     <div class="container">
         <div class="row justify-content-between"> 
             <!-- left -->
