feat:being done mobile also added menu bar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="bootstrapt/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrapt/main.css">
+    <link rel="stylesheet" href="bootstrapt/mobile.css">
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +31,8 @@
                 <a class="navbar-brand" href="#">
                     <img src="./img/logo.png" alt="Bootstrap" width="114" height="40 ">
                 </a>
-                <ul class="nav text-black">
+                
+                <ul class="nav text-black category-bussines">
                     <li class="nav-item">
                         <a class="nav-link text-black" href="#">Personal</a>
                     </li>
@@ -42,7 +44,7 @@
             <!-- link   -->
             <ul class="nav justify-content-end text-black">
                 <li class="nav-item">
-                    <a class="nav-link text-black" aria-current="page" href="#">Zenefits</a>
+                    <a class="nav-link text-black" aria-current="page" href="#">Benefits</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-black" href="#">Features</a>
@@ -54,6 +56,11 @@
                     <a class="nav-link text-black" href="#">Get app</a>
                 </li>
             </ul>
+            <!-- mobile menu -->
+            <div class="bars">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+            <!-- mobile menu -->
         </div>
     </nav>
     <!-- hero -->
@@ -62,7 +69,7 @@
             <div class=" shopping row">
 
                 <!-- left -->
-                <div class="left col-6 d-flex flex-column justify-content-center">
+                <div class="left col-12 col-md-6 col-lg-6 d-flex flex-column justify-content-center ">
                     <p class="desc">
                         <i class="fa-regular fa-circle-play"></i>
                         In every beginning, there is chaos.
@@ -72,14 +79,13 @@
                     <p class="text">See how we can help with making your shopping experience and money management more
                         ZEN.</p>
                     <div class="device d-flex flex-column mt-2">
-                        <img src="./img/apple.png" alt="" class="w-25 mb-3">
-                        <img src="./img/android.png" alt="" class="w-25">
-
+                      <img src="./img/apple.png" alt="#" class="w-25 mb-4">
+                      <img src="./img/android.png" alt="#" class="w-25">
                     </div>
                 </div>
                 <!-- right -->
-                <div class="right col-6">
-                    <img src="./img/mobile-phone.png" alt="">
+                <div class="right col-12 col-md-6 col-lg-6">
+                    <img src="./img/mobile-phone.png" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -89,13 +95,13 @@
 
     <section class="warranty my-5">
         <div class="container">
-            <div class="row justify-content-between">
+            <div class="row ">
                 <!-- left -->
-                <div class="left col-6">
-                    <img src="./img/warranty.png" alt="">
+                <div class="left col-12 col-md-6 col-lg-6">
+                    <img src="./img/warranty.png" alt="" class="img-fluid">
                 </div>
                 <!-- right -->
-                <div class="right text-part col-6 d-flex flex-column justify-content-center ">
+                <div class="right text-part col-12 col-md-6 col-lg-6 d-flex flex-column justify-content-center">
                     <h1 class="title ">1-year warranty boost</h1>
                     <p class="text">ZEN cards have a very neat feature that will help you whenever your electronic
                         devices start failing after the standard warranty ends, which is pretty common.</p>
@@ -128,7 +134,7 @@
                 </div>
                 <!-- right -->
                 <div class="right col-6">
-                    <img src="./img/zen-care.png" alt="">
+                    <img src="./img/zen-care.png" alt="" class="img-fluid">>
                 </div>
             </div>
         </div>
@@ -154,7 +160,7 @@
             </div>
    </section>
 
-            <!-- partner -->
+         <!-- partner -->
     <section class="partners my-5">
                 <div class="container">
                     <div class="row ">
@@ -190,7 +196,7 @@
 
             <!-- right -->
             <div class="right col-6">
-                <img src="./img/mastercard.png" alt="">
+                <img src="./img/mastercard.png" alt="" class="img-fluid">>
             </div>
         </div>
     </div>
@@ -203,7 +209,7 @@
         <div class="row justify-content-between">
             <!-- left -->
             <div class="left col-6">
-                <img src="./img/no-fee.png" alt="">
+                <img src="./img/no-fee.png" alt="" class="img-fluid">>
             </div>
             <!-- right -->
             <div class="right text-part col-6 d-flex flex-column justify-content-center ">
@@ -230,7 +236,7 @@
 
             <!-- right -->
             <div class="right col-6">
-                <img src="./img/app.png" alt="">
+                <img src="./img/app.png" alt="" class="img-fluid">>
             </div>
         </div>
     </div>
@@ -243,7 +249,7 @@
         <div class="row justify-content-between"> 
             <!-- left -->
             <div class="left col-6">
-                <img src="./img/account.png" alt="">
+                <img src="./img/account.png" alt="" class="img-fluid">>
             </div>
             <!-- right -->
             <div class="right text-part col-6 d-flex flex-column justify-content-center " >
