feat:being completed media

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     <!-- hero -->
     <section class="hero">
         <div class="container">
-            <div class=" shopping row">
+            <div class=" shopping row mt-md-5">
 
                 <!-- left -->
-                <div class="left col-12 col-md-6 col-lg-6 d-flex flex-column justify-content-center ">
-                    <p class="desc">
+                <div class="left col-12 col-md-6 col-lg-6 d-flex flex-column justify-content-center flex-md-wrap ">
+                    <p class="desc ">
                         <i class="fa-regular fa-circle-play"></i>
                         In every beginning, there is chaos.
                     </p>
@@ -78,13 +78,17 @@
                     <h1 class="title mt-0 mb-3 p-0 ">Mindful money.</h1>
                     <p class="text">See how we can help with making your shopping experience and money management more
                         ZEN.</p>
-                    <div class="device d-flex flex-column mt-2">
-                      <img src="./img/apple.png" alt="#" class="w-25 mb-4">
-                      <img src="./img/android.png" alt="#" class="w-25">
+                    <div class="device mt-2">
+                        <div class="apple">
+                            <img src="./img/apple.png" alt="#" class="">
+                        </div>
+                        <div class="android">
+                            <img src="./img/android.png" alt="#" class="">
+                        </div>
                     </div>
                 </div>
                 <!-- right -->
-                <div class="right col-12 col-md-6 col-lg-6">
+                <div class="right image-part col-12 col-md-6 col-lg-6">
                     <img src="./img/mobile-phone.png" alt="" class="img-fluid">
                 </div>
             </div>
@@ -95,9 +99,9 @@
 
     <section class="warranty my-5">
         <div class="container">
-            <div class="row ">
+            <div class="row mt-md-3">
                 <!-- left -->
-                <div class="left col-12 col-md-6 col-lg-6">
+                <div class="left image-part col-12 col-md-6 col-lg-6">
                     <img src="./img/warranty.png" alt="" class="img-fluid">
                 </div>
                 <!-- right -->
@@ -105,7 +109,7 @@
                     <h1 class="title ">1-year warranty boost</h1>
                     <p class="text">ZEN cards have a very neat feature that will help you whenever your electronic
                         devices start failing after the standard warranty ends, which is pretty common.</p>
-                    <p class="bottom-text">When you buy any electronics with your ZEN shopping Mastercard®, their
+                    <p class="text">When you buy any electronics with your ZEN shopping Mastercard®, their
                         warranty gets extended by one year. How does it work? It simply does. Automatically.</p>
                 </div>
             </div>
@@ -116,7 +120,7 @@
 
     <section class="care my-5">
         <div class="container">
-            <div class="row justify-content-between">
+            <div class="row">
                 <!-- left -->
                 <div class="left text-part col-6 d-flex flex-column justify-content-center ">
                     <h1 class="title ">ZEN Care</h1>
@@ -160,7 +164,7 @@
             </div>
    </section>
 
-         <!-- partner -->
+    <!-- partner -->
     <section class="partners my-5">
                 <div class="container">
                     <div class="row ">
@@ -176,9 +180,9 @@
                 </div>
     </section>
 <!-- Mastercard -->
-<section class="mastercard my-5">
+<section class="mastercard my-5">   
     <div class="container">
-        <div class="row justify-content-between"> 
+        <div class="row "> 
             <!-- left -->
             <div class="left text-part col-6 d-flex flex-column justify-content-center" >
                     <h1 class="title ">ZEN shopping Mastercard</h1>
@@ -206,7 +210,7 @@
 
 <section class="shopping my-5">
     <div class="container">
-        <div class="row justify-content-between">
+        <div class="row">
             <!-- left -->
             <div class="left col-6">
                 <img src="./img/no-fee.png" alt="" class="img-fluid">>
@@ -226,7 +230,7 @@
 
 <section class="one-app my-5">
     <div class="container">
-        <div class="row justify-content-between"> 
+        <div class="row"> 
             <!-- left -->
             <div class="left text-part col-6 d-flex flex-column justify-content-center " >
                     <h1 class="title ">One app, one account, many currencies</h1>
@@ -246,7 +250,7 @@
 
 <section class="account my-5">
     <div class="container">
-        <div class="row justify-content-between"> 
+        <div class="row"> 
             <!-- left -->
             <div class="left col-6">
                 <img src="./img/account.png" alt="" class="img-fluid">>
@@ -266,7 +270,7 @@
 </section>
 
 <!-- footer -->
-<section class="footer mt-5">
+<!-- <section class="footer mt-5">
     <div class="container">
         <div class="row">
             <div class="learn col-2">
@@ -309,7 +313,7 @@
 
         </div>
     </div>
-</section>
+</section> -->
 
 
     <script src="bootstrapt/js/bootstrap.min.js"></script>
