feat:added href links

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <ul class="mobile-menu ">
                 <li class="nav-item">
-                    <a class="nav-link text-black" aria-current="page" href="#">Benefits</a>
+                    <a class="nav-link text-black" aria-current="page" href="index.html/.shopping">Benefits</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-black" href="#">Features</a>
@@ -93,12 +93,14 @@
                     <p class="text">See how we can help with making your shopping experience and money management more
                         ZEN.</p>
                     <div class="device mt-2">
-                        <div class="apple">
-                            <img src="./img/apple.png" alt="#" class="">
-                        </div>
-                        <div class="android">
-                            <img src="./img/android.png" alt="#" class="">
-                        </div>
+                       <a href="https://apps.apple.com/pl/app/zen-com-for-peaceful-shopping/id1505547865?__hstc=247540376.4886400e99a5c02de0863a5e5e857214.1675241312131.1675337933924.1675340236219.12&__hssc=247540376.1.1675348572938&__hsfp=2335920480&hsCtaTracking=1353f94e-2812-4cd5-9a8a-bf30258a1409%7Cc3a31c60-9f83-4b23-926a-a13bd3e50221" class="apple">
+                           <img src="./img/apple.png" alt="#"  class="">
+
+                       </a>
+                       <a href="https://play.google.com/store/apps/details?id=com.zen.application&hl=en&gl=US&__hstc=247540376.4886400e99a5c02de0863a5e5e857214.1675241312131.1675337933924.1675340236219.12&__hssc=247540376.1.1675348572938&__hsfp=2335920480&hsCtaTracking=ed3c4256-0849-4760-bb50-d976313405a1%7C5c683da2-dc0e-4466-acc6-ab229023bb3d" class="android">
+                           <img src="./img/android.png" alt="#"  class="">
+                       </a>
+                       
                     </div>
                 </div>
                 <!-- right -->
@@ -183,15 +185,32 @@
     <!-- partner -->
     <section class="partners my-5">
         <div class="container">
-            <div class="row ">
-                <img src="./img/partner-1.png" alt="" class="col-3 px-5">
-                <img src="./img/partner-2.png" alt="" class="col-3 px-5">
-                <img src="./img/partner-3.png" alt="" class="col-3 px-5">
-                <img src="./img/partner-4.png" alt="" class="col-3 px-5">
-                <img src="./img/partner-5.png" alt="" class="col-3 px-5">
-                <img src="./img/partner-6.png" alt="" class="col-3 px-5">
-                <img src="./img/partner-7.png" alt="" class="col-3 px-5">
-                <img src="./img/partner-8.png" alt="" class="col-3 px-5">
+            <div class="row flex-wrap gap-sm-5">
+                <div class="partner col-12 col-md-4 col-lg-3 px-5">
+                    <img src="./img/partner-1.png" alt="">
+                </div>
+                <div class="partner col-12 col-md-4 col-lg-3 px-5">
+                    <img src="./img/partner-2.png" alt="">
+                </div>
+                <div class="partner col-12 col-md-4 col-lg-3 px-5">
+                    <img src="./img/partner-3.png" alt="">
+                </div>
+                <div class="partner col-12 col-md-4 col-lg-3 px-5">
+                    <img src="./img/partner-4.png" alt="">
+                </div>
+                <div class="partner col-12 col-md-4 col-lg-3 px-5">
+                    <img src="./img/partner-5.png" alt="">
+                </div>
+                <div class="partner col-12 col-md-4 col-lg-3 px-5">
+                    <img src="./img/partner-6.png" alt="">
+                </div>
+                <div class="partner col-12 col-md-4 col-lg-3 px-5">
+                    <img src="./img/partner-7.png" alt="">
+                </div>
+                <div class="partner col-12 col-md-4 col-lg-3 px-5">
+                    <img src="./img/partner-8.png" alt="">
+                </div>
+                
             </div>
         </div>
     </section>
@@ -287,10 +306,14 @@
                         tiresome and full of endless blanks to fill in. Well, it’s not.</p>
                     <p class="text">We have designed the whole process to make it the simplest and the shortest one ever
                         conceived for a personal account. Download the app and see for yourself!</p>
-                    <div class="device d-flex flex-column mt-2">
-                        <img src="./img/apple.png" alt="" class="w-25 mb-3">
-                        <img src="./img/android.png" alt="" class="w-25">
-                    </div>
+                        <div class="device mt-2 ">
+                            <a href="https://apps.apple.com/pl/app/zen-com-for-peaceful-shopping/id1505547865?__hstc=247540376.4886400e99a5c02de0863a5e5e857214.1675241312131.1675337933924.1675340236219.12&__hssc=247540376.1.1675348572938&__hsfp=2335920480&hsCtaTracking=1353f94e-2812-4cd5-9a8a-bf30258a1409%7Cc3a31c60-9f83-4b23-926a-a13bd3e50221" class="apple">
+                                <img src="./img/apple.png" alt="#"  class="">
+                            </a>
+                            <a href="https://play.google.com/store/apps/details?id=com.zen.application&hl=en&gl=US&__hstc=247540376.4886400e99a5c02de0863a5e5e857214.1675241312131.1675337933924.1675340236219.12&__hssc=247540376.1.1675348572938&__hsfp=2335920480&hsCtaTracking=ed3c4256-0849-4760-bb50-d976313405a1%7C5c683da2-dc0e-4466-acc6-ab229023bb3d" class="android ">
+                                <img src="./img/android.png" alt="#"  class="">
+                            </a>
+                         </div>
                 </div>
             </div>
         </div>
