--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <ul class="mobile-menu ">
                 <li class="nav-item">
-                    <a class="nav-link text-black" aria-current="page" href="index.html/.shopping">Benefits</a>
+                    <a class="nav-link text-black" aria-current="page" href="">Benefits</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-black" href="#">Features</a>
@@ -94,11 +94,11 @@
                         ZEN.</p>
                     <div class="device mt-2">
                        <a href="https://apps.apple.com/pl/app/zen-com-for-peaceful-shopping/id1505547865?__hstc=247540376.4886400e99a5c02de0863a5e5e857214.1675241312131.1675337933924.1675340236219.12&__hssc=247540376.1.1675348572938&__hsfp=2335920480&hsCtaTracking=1353f94e-2812-4cd5-9a8a-bf30258a1409%7Cc3a31c60-9f83-4b23-926a-a13bd3e50221" class="apple">
-                           <img src="./img/apple.png" alt="#"  class="">
+                           <img src="./img/apple.png" alt="#"  class="img-fluid">
 
                        </a>
                        <a href="https://play.google.com/store/apps/details?id=com.zen.application&hl=en&gl=US&__hstc=247540376.4886400e99a5c02de0863a5e5e857214.1675241312131.1675337933924.1675340236219.12&__hssc=247540376.1.1675348572938&__hsfp=2335920480&hsCtaTracking=ed3c4256-0849-4760-bb50-d976313405a1%7C5c683da2-dc0e-4466-acc6-ab229023bb3d" class="android">
-                           <img src="./img/android.png" alt="#"  class="">
+                           <img src="./img/android.png" alt="#"  class="img-fluid">
                        </a>
                        
                     </div>
