feat:fixed issues

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <p class="text">Online shopping is flawed with all kind of fees. Currency exchange fees, processing
                         fees and even fees for having multiple fees. Getting rid of them became our hobby. Same goes for
                         ATM withdrawal fees.</p>
-                    <p class="bottom-text"> Enjoy your money globally. Every uncut part of it. Keep reading. ZEN goes
+                    <p class="text"> Enjoy your money globally. Every uncut part of it. Keep reading. ZEN goes
                         beyond shopping with a fully functional account.</p>
                 </div>
             </div>
